@@ -1,23 +1,42 @@
-// Microsoft Visual C++ generated resource script.
+//Microsoft Developer Studio generated resource script.
 //
+#include "resrc1.h"
 
-
+#define APSTUDIO_READONLY_SYMBOLS
+/////////////////////////////////////////////////////////////////////////////
+//
+// Generated from the TEXTINCLUDE 2 resource.
+//
 #include "resource.h"
+#define APSTUDIO_HIDDEN_SYMBOLS
 #include "windows.h"
+#undef APSTUDIO_HIDDEN_SYMBOLS
+
+/////////////////////////////////////////////////////////////////////////////
+#undef APSTUDIO_READONLY_SYMBOLS
+
+/////////////////////////////////////////////////////////////////////////////
+// English (Australia) resources
+
+#if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENA)
+#ifdef _WIN32
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
+#pragma code_page(1252)
+#endif //_WIN32
 
 /////////////////////////////////////////////////////////////////////////////
 //
 // RT_MANIFEST
 //
 
-1                       RT_MANIFEST             "res/Win32++.manifest"
+1                       RT_MANIFEST MOVEABLE PURE "res/Win32++.manifest"
 
 /////////////////////////////////////////////////////////////////////////////
 //
 // Menu
 //
 
-IDW_MAIN MENU
+IDW_MAIN MENU DISCARDABLE 
 BEGIN
     POPUP "&File"
     BEGIN
@@ -59,14 +78,14 @@ END
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
-IDW_MAIN                 ICON                    "res/enhanced.ico"
+IDW_MAIN                ICON    DISCARDABLE     "res/enhanced.ico"
 
 /////////////////////////////////////////////////////////////////////////////
 //
 // Bitmap
 //
 
-IDW_MAIN                 BITMAP                  "res/toolbar.bmp"
+IDW_MAIN                BITMAP  MOVEABLE PURE   "res/toolbar.bmp"
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -74,11 +93,10 @@ IDW_MAIN                 BITMAP                  "res/toolbar.bmp"
 //
 
 IDW_ABOUT DIALOGEX 0, 0, 186, 90
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE |
-    WS_CAPTION | WS_SYSMENU
+STYLE DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
+    WS_SYSMENU
 CAPTION "About"
-//FONT 8, "MS Shell Dlg", 400, 0, 0x1
-FONT 8, "MS Shell Dlg", 400, 0
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,68,49,50,14
     CTEXT           "Frame Application",IDW_STATIC,60,22,64,11
@@ -91,7 +109,7 @@ END
 // Accelerator
 //
 
-IDW_MAIN ACCELERATORS
+IDW_MAIN ACCELERATORS MOVEABLE PURE 
 BEGIN
     "C",            IDM_EDIT_COPY,          VIRTKEY, CONTROL, NOINVERT
     VK_INSERT,      IDM_EDIT_COPY,          VIRTKEY, CONTROL, NOINVERT
@@ -109,18 +127,48 @@ BEGIN
 END
 
 
+#ifdef APSTUDIO_INVOKED
+/////////////////////////////////////////////////////////////////////////////
+//
+// TEXTINCLUDE
+//
+
+1 TEXTINCLUDE DISCARDABLE 
+BEGIN
+    "resrc1.h\0"
+END
+
+2 TEXTINCLUDE DISCARDABLE 
+BEGIN
+    "#include ""resource.h""\r\n"
+    "#define APSTUDIO_HIDDEN_SYMBOLS\r\n"
+    "#include ""windows.h""\r\n"
+    "#undef APSTUDIO_HIDDEN_SYMBOLS\r\n"
+    "\0"
+END
+
+3 TEXTINCLUDE DISCARDABLE 
+BEGIN
+    "\r\n"
+    "\0"
+END
+
+#endif    // APSTUDIO_INVOKED
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
 // String Table
 //
 
-STRINGTABLE
+STRINGTABLE DISCARDABLE 
 BEGIN
-    IDW_MAIN                 "Frame Window"
+    IDW_MAIN                "Frame Window"
+    IDW_VIEW_TOOLBAR        "Show or hide the tool bar"
+    IDW_VIEW_STATUSBAR      "Show or hide the status bar"
 END
 
-STRINGTABLE
+STRINGTABLE DISCARDABLE 
 BEGIN
     IDM_FILE_NEW            "Create a New Document"
     IDM_FILE_OPEN           "Open Existing Document"
@@ -128,35 +176,71 @@ BEGIN
     IDM_FILE_SAVEAS         "Save the Document with a new name"
     IDM_FILE_PRINT          "Print the Document"
     IDM_FILE_EXIT           "End the Program"
-END
-
-STRINGTABLE
-BEGIN
     IDM_EDIT_UNDO           "Undo the last action"
     IDM_EDIT_REDO           "Redo the previously undone action"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
     IDM_EDIT_CUT            "Cut the Selected Contents to the Clipboard"
     IDM_EDIT_COPY           "Copy the Selected Contents to the Clipboard"
     IDM_EDIT_PASTE          "Paste the Clipboard Contents to the Document"
     IDM_EDIT_DELETE         "Erase the selected Contents"
-    IDW_VIEW_TOOLBAR        "Show or hide the tool bar"
-    IDW_VIEW_STATUSBAR      "Show or hide the status bar"
-END
-
-STRINGTABLE
-BEGIN
     IDM_HELP_ABOUT          "Display Information about this program"
 END
 
-STRINGTABLE
+STRINGTABLE DISCARDABLE 
 BEGIN
-    SC_CLOSE                "Close the Window"
-    SC_MAXIMIZE             "Maximize the Window"
-    SC_MINIMIZE             "Minimize the WIndow"
-    SC_MOVE                 "Move the Window"
-	SC_NEXTWINDOW           "Select Next Window"
-	SC_PREVWINDOW           "Select Previous Window"
-    SC_RESTORE              "Restore the Window"
-    SC_SIZE                 "Resize the Window"
+    61536                   "Close the Window"
 END
 
+STRINGTABLE DISCARDABLE 
+BEGIN
+    61488                   "Maximize the Window"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    61472                   "Minimize the WIndow"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    61456                   "Move the Window"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    61504                   "Select Next Window"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    61520                   "Select Previous Window"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    61728                   "Restore the Window"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    61440                   "Resize the Window"
+END
+
+#endif    // English (Australia) resources
+/////////////////////////////////////////////////////////////////////////////
+
+
+
+#ifndef APSTUDIO_INVOKED
+/////////////////////////////////////////////////////////////////////////////
+//
+// Generated from the TEXTINCLUDE 3 resource.
+//
+
+
+/////////////////////////////////////////////////////////////////////////////
+#endif    // not APSTUDIO_INVOKED
 
